--- a/src/parts/Header/header.sass
+++ b/src/parts/Header/header.sass
@@ -69,12 +69,17 @@ header
       +rmin(1200)
         width: 120px
         justify-content: space-between
-      .userprofile
+      .userprofile, .logout
         width: 18px
         height: 18px
         display: block
         position: relative
         z-index: 12
+        margin-right: 10px
+        border: none
+        outline: none
+        background: transparent
+        cursor: pointer
         img
           width: 18px
           height: 18px
