--- a/src/parts/Header/header.sass
+++ b/src/parts/Header/header.sass
@@ -67,15 +67,15 @@ header
         left: 0px
         opacity: 0
       +rmin(1200)
-        width: 120px
         justify-content: space-between
+      .logout
+        margin-left: 10px  
       .userprofile, .logout
         width: 18px
         height: 18px
         display: block
         position: relative
         z-index: 12
-        margin-right: 10px
         border: none
         outline: none
         background: transparent
@@ -86,5 +86,6 @@ header
       .langs
         position: relative
         z-index: 12
+        margin-right: 20px
         +r(767)
           display: none
