--- a/src/pages/Authorization/authrization.sass
+++ b/src/pages/Authorization/authrization.sass
@@ -1,13 +1,16 @@
 @import '../../sass/_mixins.sass'
 @import '../../sass/_variables.sass'
-  
+
+form
+  width: 100%
+  max-width: 280px
 .registration
   width: 100%
   padding-top: 120px
   padding-bottom: 50px
   +rmin(1200)
     padding-top: 170px
-  .registration_wrap  
+  .registration_wrap
     width: 100%
     max-width: 400px
     padding: 20px
@@ -40,37 +43,39 @@
           padding: 5px
           &::placeholder
             color: rgba(0,0,0,0.3)
-    .forgotPass-link       
+    .forgotPass-link
       text-decoration: underline
       font-size: 10px
       margin-bottom: 20px
       color: #494949
       opacity: 0.5
-    .signUpBtn
-      margin: 20px auto 20px auto  
+    .saveBtn
+      margin: 40px auto 20px auto
       width: 100%
     .fbSignUp
       width: 100%
-      height: 50px  
+      height: 50px
       color: #ffffff
       background: #3B5998
       outline: none
-      border-radius: 5px 
+      border-radius: 5px
       border: none
-      margin: 20px auto 
+      margin: 20px auto
       text-transform: uppercase
       cursor: pointer
       letter-spacing: 1px
-    .signInLink  
+    .signInLink
       display: block
       margin: 20px 0
       text-decoration: underline
-    .warn  
+    .warn
       font-size: 10px
       text-align: justify
       opacity: 0.5
       margin-bottom: 20px
       a
         font-weight: 900
-
-      
+.error-text
+  color: red
+  font-size: 12px
+  position: relative
