--- a/src/pages/Authorization/authrization.sass
+++ b/src/pages/Authorization/authrization.sass
@@ -43,6 +43,8 @@ form
           padding: 5px
           &::placeholder
             color: rgba(0,0,0,0.3)
+          &.invalid
+            border: 1px solid red
     .forgotPass-link
       text-decoration: underline
       font-size: 10px
