--- a/src/pages/Authorization/authrization.sass
+++ b/src/pages/Authorization/authrization.sass
@@ -78,7 +78,7 @@ form
       a
         font-weight: 900
 .error-text
-  color: red
+  color: #e85050
   font-size: 12px
   position: relative
   display: block
