add property for disabled button

--- a/src/pages/Authorization/authrization.sass
+++ b/src/pages/Authorization/authrization.sass
@@ -54,6 +54,8 @@ form
     .saveBtn
       margin: 40px auto 20px auto
       width: 100%
+      &:disabled
+        opacity: 0.5
     .fbSignUp
       width: 100%
       height: 50px
