--- a/src/components/FlashMessage/flashMessage.sass
+++ b/src/components/FlashMessage/flashMessage.sass
@@ -11,6 +11,6 @@
     color: #fff
     font-size: 14px
     &.success-mesage
-        background: #5cb85c
+        background: #5cab5c
     &.error-message
         background: #d9534f
