--- a/src/appComponent.sass
+++ b/src/appComponent.sass
@@ -120,6 +120,17 @@ a
 	height: 100px
 	&.center
 		justify-content: center
+.close-btn
+	width: 25px
+	height: 25px
+	background: transparent
+	outline: none
+	border: none
+	display: flex
+	flex-direction: column
+	justify-content: center
+	align-items: center
+	color: #fff
 .h_main
 	font-size: 20px
 	font-family: $lato
