--- a/src/components/FlashMessage/flashMessage.sass
+++ b/src/components/FlashMessage/flashMessage.sass
@@ -1,8 +1,8 @@
 .flashmessage
     width: 100%
-    height: 50%
+    height: 50px
     border-radius: 5px
-    margin-bottom: 20px
+    margin-bottom: 10px
     display: flex
     flex-direction: row
     justify-content: space-between
