--- a/src/pages/Authorization/authrization.sass
+++ b/src/pages/Authorization/authrization.sass
@@ -17,6 +17,7 @@ form
     flex-direction: column
     justify-content: flex-start
     align-items: center
+    transition: all 0.5s ease
     .registration-template
       width: 280px
       margin: 0 auto
