create footer component

--- a/src/appComponent.sass
+++ b/src/appComponent.sass
@@ -8,7 +8,12 @@
 	-webkit-tap-highlight-color: transparent
 .wrapper
 	width: 100%
+	min-height: 100vh
 	overflow: hidden
+	display: flex
+	flex-direction: column
+	justify-content: space-between
+	align-content: center
 .container
 	width: 100%
 	max-width: 1200px
