--- a/src/components/UserProfile/userprofile.sass
+++ b/src/components/UserProfile/userprofile.sass
@@ -1,25 +1,33 @@
 @import '../../sass/_mixins.sass'
 @import '../../sass/_variables.sass'
 
-
-.user-profile-form
+.user-profile-wrap
     width: 100%
     display: flex
-    flex-direction: column-reverse
-    justify-content: space-between
-    align-items: flex-start
-    flex-wrap: wrap
-    +rmin(1024)
-        flex-wrap: nowrap
-        flex-direction: row
+    flex-direction: column
+    justify-content: center
+    align-items: center
+.user-profile-form
+    width: 100%
+    display: grid
+    grid-template-columns: 1fr
     .user-profile_img
         width: 100%
         display: flex
         flex-direction: column
         justify-content: flex-start
         align-items: center
+        +r(767)
+            order: -1
         .img-holder
             width: 200px
             height: 200px
             border-radius: 100%
             overflow: hidden
+    .user-profile__main
+        display: grid
+        grid-template-columns: 1fr 35px
+        grid-auto-rows: minmax(50px, auto)
+        grid-row-gap: 20px
+        grid-column-gap: 10px
+        padding: 20px 0
