--- a/src/parts/Footer/footer.sass
+++ b/src/parts/Footer/footer.sass
@@ -4,6 +4,7 @@
 footer
     width: 100%
     padding: 50px 0 20px 0
+    border-top: 1px solid #f3f3f3
     .footer-wrap
         display: grid
         grid-template-columns: 1fr 1fr
