--- a/src/appComponent.sass
+++ b/src/appComponent.sass
@@ -116,6 +116,17 @@ a
 			border-radius: 100%
 			opacity: 0
 			transition: all 0.5s ease
+input[type='text']
+	border: none
+	border-radius: 0
+	outline: none
+	width: 100%
+	height: 100%
+	padding: 5px
+	&::placeholder
+		color: rgba(0,0,0,0.3)
+	&.invalid
+		border: 1px solid red
 .btn_holder
 	width: 100%
 	display: flex
