modified form component to reuse for userprofile

--- a/src/components/UserProfile/userprofile.sass
+++ b/src/components/UserProfile/userprofile.sass
@@ -41,3 +41,8 @@
         width: 100%
         +rmin(768)
             width: 50%
+.check-box__holder
+    display: flex
+    flex-direction: row
+    justify-content: flex-start
+    align-items: center
