--- a/src/appComponent.sass
+++ b/src/appComponent.sass
@@ -131,7 +131,7 @@ input[type='text']
 	width: 100%
 	display: flex
 	flex-direction: column
-	justify-content: flex-start
+	justify-content: center
 	align-items: center
 	height: 100px
 	&.center
