--- a/src/components/Form/form.sass
+++ b/src/components/Form/form.sass
@@ -10,7 +10,7 @@
       align-items: center
       &.active
         display: flex
-      div
+      .main-field
         width: 100%
         height: 50px
         border-bottom: 1px solid #f3f3f3
@@ -25,6 +25,16 @@
           padding: 5px
           &::placeholder
             color: rgba(0,0,0,0.3)
+textarea
+  border: none
+  border-bottom: 1px solid #f3f3f3
+  border-radius: 0
+  outline: none
+  width: 100%
+  height: 100px
+  padding: 5px
+  &::placeholder
+    color: rgba(0,0,0,0.3)
 .forgotPass-link
   text-decoration: underline
   font-size: 10px
@@ -58,13 +68,14 @@
   a
     font-weight: 900
 
-.checkbox-field
+.additional-field
   width: 100%
   height: 50px
   display: flex
   flex-direction: row
   justify-content: flex-start
   align-items: center
+  border-bottom: none
   .checkbox-holder
     width: 35px
     height: 35px
