create idDesigner property update

--- a/src/components/Form/form.sass
+++ b/src/components/Form/form.sass
@@ -96,6 +96,7 @@ textarea
       background: #000
       top: calc(50% - 7px)
       left: calc(50% - 7px)
+      opacity: 0
     &.checked
       &:after
         opacity: 1
