--- a/src/components/Form/form.sass
+++ b/src/components/Form/form.sass
@@ -76,6 +76,7 @@ textarea
   justify-content: flex-start
   align-items: center
   border-bottom: none
+  margin-bottom: 20px
   .checkbox-holder
     width: 35px
     height: 35px
