--- a/src/components/UserProfile/userprofile.sass
+++ b/src/components/UserProfile/userprofile.sass
@@ -1,12 +1,17 @@
 @import '../../sass/_mixins.sass'
 @import '../../sass/_variables.sass'
 
+.user-profile__main
+    padding: 20px
+    border-radius: 5px
+    box-shadow: 0px 5px 7px rgba(0,0,0,0.16)
 .user-profile-wrap
     width: 100%
     display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
+    flex-direction: row
+    justify-content: space-between
+    align-items: flex-start
+    flex-wrap: wrap
 .user-profile-form
     width: 100%
     display: flex
